# elastdetect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
elastdetect/: cli.py
